# mcp-server

./: .gitignore  .mcp.json  LICENSE  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  server.py  test_server.py
backend/: main.py  morpho_constants.py  start.sh
public/: test.txt
